--- a/index.html
+++ b/index.html
@@ -4,31 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Z Biletem</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="upContent">
-      <div
-        style="
-          margin-bottom: 3vh;
-          display: flex;
-          flex-direction: row;
-          color: white;
-        "
-      >
-        <img
-          src="./Hamburger_icon.svg"
-          alt=""
-          srcset=""
-          style="fill: white; margin-right: 1vh"
-        />
-        <h2 style="font-weight: bold; font-family: sans-serif">Ważny bilet</h2>
+      <div id="menuSection">
+        <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" />
+        <h3 style="font-weight: bold; font-family: sans-serif">Ważny bilet</h3>
       </div>
       <h1 style="margin-bottom: 5vh">Normalny</h1>
       <h2>JEDNORAZOWY 4 - 7 PRZYSTANKÓW</h2>
       <h2>MZK JASTRZĘBIE-ZDRÓJ</h2>
-      <img src="" alt="aaa" />
+      <video
+        src="./2022-05-10 21-30-02.mp4"
+        alt="aaa"
+        style="width: 110%; transform: translateX(-3vh)"
+        autoplay
+        loop
+      ></video>
     </div>
 
     <div id="content">
@@ -43,8 +37,24 @@
         <div class="element"></div>
       </div>
       <div id="downContent">
-        <button id="upBtn">Pokaż kod QR</button>
-        <button id="downBtn">Kup ponownie</button>
+        <button id="upBtn">
+          <img
+            src="./Zrzut ekranu 2022-05-10 220003.png"
+            alt=""
+            srcset=""
+            style="height: 50%; margin-right: 1vh"
+          />
+          Pokaż kod QR
+        </button>
+        <button id="downBtn">
+          <img
+            src="./Przechwytywanie.PNG"
+            alt=""
+            srcset=""
+            style="height: 60%; margin-right: 1vh"
+          />
+          Kup ponownie
+        </button>
         <!-- <div id="downText"> -->
         <p
           style="
