--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <h2>MZK JASTRZĘBIE-ZDRÓJ</h2>
       <video
         src="./2022-05-10 21-30-02.mp4"
-        alt="aaa"
         style="width: 110%; transform: translateX(-3vh)"
         autoplay
         loop
@@ -27,14 +26,26 @@
 
     <div id="content">
       <div id="incontent">
-        <div class="element"></div>
-        <div class="element">Numer Linii</div>
+        <div class="element" id="smallElement"></div>
+        <div class="element">
+          <div>Numer linii</div>
+          <div></div>
+        </div>
         <hr />
-        <div class="element"></div>
+        <div class="element">
+          <div>Ważny od:</div>
+          <div></div>
+        </div>
         <hr />
-        <div class="element"></div>
+        <div class="element">
+          <div>Ważny do:</div>
+          <div></div>
+        </div>
         <hr />
-        <div class="element"></div>
+        <div class="element">
+          <div>Cena</div>
+          <div></div>
+        </div>
       </div>
       <div id="downContent">
         <button id="upBtn">
