--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         style="width: 110%; transform: translateX(-3vh)"
         autoplay
         loop
+        muted
       ></video>
     </div>
 
