--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <h2>MZK JASTRZĘBIE-ZDRÓJ</h2>
       <video
         src="./2022-05-10 21-30-02.mp4"
-        style="width: 110%; transform: translateX(-3vh)"
+        style="
+          width: 110%;
+          transform: translateX(-3vh) translateX(-3vh) scaleY(1.2);
+        "
         autoplay
         loop
         muted
