--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" />
         <h3 style="font-weight: bold; font-family: sans-serif">Ważny bilet</h3>
       </div>
-      <h1 style="margin-bottom: 5vh">Normalny</h1>
-      <h2>JEDNORAZOWY 4 - 7 PRZYSTANKÓW</h2>
-      <h2>MZK JASTRZĘBIE-ZDRÓJ</h2>
+      <h1 style="margin-bottom: 5vh" class="disable-selection">Normalny</h1>
+      <h2 class="disable-selection">JEDNORAZOWY 4 - 7 PRZYSTANKÓW</h2>
+      <h2 class="disable-selection">MZK JASTRZĘBIE-ZDRÓJ</h2>
       <video
         src="./2022-05-10 21-30-02.mp4"
         style="
@@ -45,28 +45,29 @@
         autoplay
         muted
         loop
+        class="disable-selection"
       ></video>
     </div>
 
     <div id="content">
       <div id="incontent">
         <div class="element" id="smallElement"></div>
-        <div class="element">
+        <div class="element disable-selection">
           <div>Numer linii</div>
           <div></div>
         </div>
         <hr />
-        <div class="element">
+        <div class="element disable-selection">
           <div>Ważny od:</div>
           <div></div>
         </div>
         <hr />
-        <div class="element">
+        <div class="element disable-selection">
           <div>Ważny do:</div>
           <div>Do końca kursu</div>
         </div>
         <hr />
-        <div class="element">
+        <div class="element disable-selection">
           <div>Cena</div>
           <div>4,00&nbspzł</div>
         </div>
@@ -85,6 +86,7 @@
           <img
             src="./Przechwytywanie.PNG"
             alt=""
+            class="disable-selection"
             srcset=""
             style="height: 60%; margin-right: 1vh"
           />
@@ -101,6 +103,7 @@
             color: rgb(66, 64, 64);
             margin-bottom: 0;
           "
+          class="disable-selection"
         >
           &nbsp; Bilet jednorazowy, na przejazd od 8 do 12 przystanków,
           autobusemy wybranej linii. Ważny od momentu zakupu. <br />
@@ -115,6 +118,7 @@
             font-family: 'Roboto', sans-serif;
             color: rgb(66, 64, 64);
           "
+          class="disable-selection"
         >
           <b>Nr biletu: </b>JZ-912-0804262736
         </p>
