--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
         <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" />
         <h3 style="font-weight: bold; font-family: sans-serif">Ważny bilet</h3>
       </div>
-      <h1 style="margin-bottom: 5vh" class="disable-selection">Normalny</h1>
+      <h1 class="disable-selection">Normalny</h1>
       <h2 class="disable-selection">JEDNORAZOWY 4 - 7 PRZYSTANKÓW</h2>
-      <h2 class="disable-selection">MZK JASTRZĘBIE-ZDRÓJ</h2>
+      <h2 class="disable-selection" style="margin-bottom: 2vh">
+        MZK JASTRZĘBIE-ZDRÓJ
+      </h2>
       <video
         src="./2022-05-10 21-30-02.mp4"
-        style="
-          width: 110%;
-          transform: translateX(-3vh) translateX(-3vh) scaleY(1.2);
-        "
         autoplay
         muted
         loop
-        class="disable-selection"
+        class="video disable-selection"
       ></video>
     </div>
 
