--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
     <div id="upContent">
       <div id="menuSection">
         <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" />
-        <h3 style="font-weight: bold; font-family: sans-serif">Ważny bilet</h3>
+        <h3
+          style="font-weight: bold; font-family: sans-serif"
+          class="disable-selection"
+        >
+          Ważny bilet
+        </h3>
       </div>
       <h1 class="disable-selection">Normalny</h1>
       <h2 class="disable-selection">JEDNORAZOWY 4 - 7 PRZYSTANKÓW</h2>
