--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div id="downContent">
-        <button id="upBtn">
+        <button id="upBtn" class="disable-selection">
           <img
             src="./Zrzut ekranu 2022-05-10 220003.png"
             alt=""
@@ -85,7 +85,7 @@
           />
           Pokaż kod QR
         </button>
-        <button id="downBtn">
+        <button id="downBtn" class="disable-selection">
           <img
             src="./Przechwytywanie.PNG"
             alt=""
