--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     </div>
 
     <div id="content">
+      <div id="qr">
+        <img src="./qr.png" id="qrPhoto" />
+        <button id="clock"></button>
+      </div>
       <div id="incontent">
         <div class="element" id="smallElement"></div>
         <div class="element disable-selection">
@@ -129,5 +133,6 @@
         <!-- </div>s -->
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
