--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <div class="element" id="smallElement"></div>
         <div class="element disable-selection">
           <div>Numer linii</div>
-          <div></div>
+          <div id="busNum">Wybierz numer</div>
         </div>
         <hr />
         <div class="element disable-selection">
           <div>Ważny od:</div>
-          <div></div>
+          <div id="fDate">Kliknij mnie!</div>
         </div>
         <hr />
         <div class="element disable-selection">
