--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
             color: rgb(66, 64, 64);
           "
           class="disable-selection"
+          id="idTicket"
         >
-          <b>Nr biletu: </b>JZ-1328-017642627369
+          <b>Nr biletu: </b>JZ-1329-
         </p>
         <!-- </div>s -->
       </div>
