--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="height=device-height, 
+    width=device-width, initial-scale=1.0, 
+    minimum-scale=1.0, maximum-scale=1.0, 
+    user-scalable=no"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -31,7 +37,7 @@
   <body>
     <div id="upContent">
       <div id="menuSection">
-        <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" />
+        <!-- <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" /> -->
         <h3
           style="font-weight: bold; font-family: sans-serif"
           class="disable-selection"
@@ -103,7 +109,7 @@
       <div id="downContent">
         <button id="upBtn" class="disable-selection">
           <img
-            src="./Zrzut ekranu 2022-05-10 220003.png"
+            src="./Zrzut ekranu 2022-07-04 202248.png"
             alt=""
             srcset=""
             style="height: 50%; margin-right: 1vh"
@@ -112,7 +118,7 @@
         </button>
         <button id="downBtn" class="disable-selection">
           <img
-            src="./Przechwytywanie.PNG"
+            src="./Zrzut ekranu 2022-07-04 202319.png"
             alt=""
             class="disable-selection"
             srcset=""
@@ -153,6 +159,17 @@
           <b>Nr biletu: </b>JZ-1329-
         </p>
         <!-- </div>s -->
+      </div>
+    </div>
+    <div id="downMenu">
+      <div class="menuInputs">
+        <img src="./image_part_001.png" alt="" srcset="" />
+      </div>
+      <div class="menuInputs" id="stupidBtn">
+        <img src="./image_part_002.png" />
+      </div>
+      <div class="menuInputs">
+        <img src="./image_part_003.png" alt="" srcset="" />
       </div>
     </div>
     <script src="script.js"></script>
