--- a/index.html
+++ b/index.html
@@ -1,134 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
-    <meta
-      name="viewport"
-      content="height=device-height, 
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+  <meta name="viewport" content="height=device-height, 
     width=device-width, initial-scale=1.0, 
     minimum-scale=1.0, maximum-scale=1.0, 
-    user-scalable=no"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#006e2c" />
-    <title>Z Biletem</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="upContent">
-      <div id="menuSection">
-        <!-- <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" /> -->
-        <h3
-          style="font-weight: bold; font-family: sans-serif"
-          class="disable-selection"
-        >
-          Ważny bilet
-        </h3>
-      </div>
-      <h1 class="disable-selection">Normalny</h1>
-      <h2 class="disable-selection" id="countB">
-        JEDNORAZOWY 4 - 7 PRZYSTANKÓW
-      </h2>
-      <h2 class="disable-selection" id="countC" style="margin-bottom: 3vh">
-        MZK JASTRZĘBIE-ZDRÓJ
-      </h2>
-      <video
-        src="./2022-05-10 21-30-02.mp4"
-        autoplay
-        muted
-        loop
-        class="video disable-selection"
-      ></video>
-    </div>
+    user-scalable=no" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+  <link rel="manifest" href="./site.webmanifest" />
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#006e2c" />
+  <title>Z Biletem</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <div id="content">
-      <div id="qr">
-        <img src="./qr.png" id="qrPhoto" />
-        <button id="clock"></button>
+<body>
+  <div id="upContent">
+    <div id="menuSection">
+      <!-- <img id="menuIcon" src="./hamburger.svg" alt="" srcset="" /> -->
+      <h3 style="font-weight: bold; font-family: sans-serif" class="disable-selection">
+        Ważny bilet
+      </h3>
+    </div>
+    <h1 class="disable-selection">Normalny</h1>
+    <h2 class="disable-selection" id="countB">
+      JEDNORAZOWY 4 - 7 PRZYSTANKÓW
+    </h2>
+    <h2 class="disable-selection" id="countC" style="margin-bottom: 3vh">
+      MZK JASTRZĘBIE-ZDRÓJ
+    </h2>
+    <video src="./2022-05-10 21-30-02.mp4" autoplay muted loop class="video disable-selection"></video>
+  </div>
+
+  <div id="content">
+    <div id="qr">
+      <img src="./qr.png" id="qrPhoto" />
+      <button id="clock"></button>
+    </div>
+    <div id="incontent">
+      <div class="element" id="smallElement"></div>
+      <div class="element disable-selection">
+        <div>Numer linii</div>
+        <div id="busNum">Wybierz numer</div>
       </div>
-      <div id="incontent">
-        <div class="element" id="smallElement"></div>
-        <div class="element disable-selection">
-          <div>Numer linii</div>
-          <div id="busNum">Wybierz numer</div>
-        </div>
-        <hr />
-        <div class="element disable-selection">
-          <div>Ważny od:</div>
-          <div id="fDate">Kliknij mnie!</div>
-        </div>
-        <hr />
-        <div class="element disable-selection">
-          <div>Ważny do:</div>
-          <div>Do końca kursu</div>
-        </div>
-        <hr />
-        <div class="element disable-selection">
-          <div>Cena</div>
-          <div>
-            <select class="form-control">
-              <option>Wybierz</option>
-              <optgroup label="Normalny">
-                <option value="0">2,00&nbspzł</option>
-                <option value="1">4,00&nbspzł</option>
-                <option value="2">5,00&nbspzł</option>
-                <option value="3">6,00&nbspzł</option>
-                <option value="4">7,00&nbspzł</option>
-              </optgroup>
-              <optgroup label="ulgowy">
-                <option value="5">1,00&nbspzł</option>
-                <option value="6">2,00&nbspzł</option>
-                <option value="7">2,50&nbspzł</option>
-                <option value="8">3,00&nbspzł</option>
-                <option value="9">3,50&nbspzł</option>
-              </optgroup>
-            </select>
-          </div>
+      <hr />
+      <div class="element disable-selection">
+        <div>Ważny od:</div>
+        <div id="fDate">Kliknij mnie!</div>
+      </div>
+      <hr />
+      <div class="element disable-selection">
+        <div>Ważny do:</div>
+        <div id="stopCount">Do końca kursu</div>
+      </div>
+      <hr />
+      <div class="element disable-selection">
+        <div>Cena</div>
+        <div>
+          <select class="form-control">
+            <option>Wybierz</option>
+            <optgroup label="Normalny">
+              <option value="0">2,00&nbspzł</option>
+              <option value="1">4,00&nbspzł</option>
+              <option value="2">5,00&nbspzł</option>
+              <option value="3">6,00&nbspzł</option>
+              <option value="4">7,00&nbspzł</option>
+            </optgroup>
+            <optgroup label="ulgowy">
+              <option value="5">1,00&nbspzł</option>
+              <option value="6">2,00&nbspzł</option>
+              <option value="7">2,50&nbspzł</option>
+              <option value="8">3,00&nbspzł</option>
+              <option value="9">3,50&nbspzł</option>
+            </optgroup>
+          </select>
         </div>
       </div>
-      <div id="downContent">
-        <button id="upBtn" class="disable-selection">
-          <img
-            src="./Zrzut ekranu 2022-07-04 202248.png"
-            alt=""
-            srcset=""
-            style="height: 50%; margin-right: 1vh"
-          />
-          Pokaż kod QR
-        </button>
-        <button id="downBtn" class="disable-selection">
-          <img
-            src="./Zrzut ekranu 2022-07-04 202319.png"
-            alt=""
-            class="disable-selection"
-            srcset=""
-            style="height: 60%; margin-right: 1vh"
-          />
-          Kup ponownie
-        </button>
-        <!-- <div id="downText"> -->
-        <p
-          style="
+    </div>
+    <div id="downContent">
+      <button id="upBtn" class="disable-selection">
+        <img src="./Zrzut ekranu 2022-07-04 202248.png" alt="" srcset="" style="height: 50%; margin-right: 1vh" />
+        Pokaż kod QR
+      </button>
+      <button id="downBtn" class="disable-selection">
+        <img src="./Zrzut ekranu 2022-07-04 202319.png" alt="" class="disable-selection" srcset=""
+          style="height: 60%; margin-right: 1vh" />
+        Kup ponownie
+      </button>
+      <!-- <div id="downText"> -->
+      <p style="
             text-align: center;
             font-size: smaller;
             width: 90%;
@@ -136,42 +101,36 @@
             font-family: 'Roboto', sans-serif;
             color: rgb(66, 64, 64);
             margin-bottom: 0;
-          "
-          class="disable-selection"
-          id="fotterText"
-        >
-          &nbsp; Bilet jednorazowy, na przejazd od 4 do 7 przystanków,
-          autobusemy wybranej linii. Ważny od momentu zakupu. <br />
-          Nie uprawnia do przesiadek.
-        </p>
-        <p
-          style="
+          " class="disable-selection" id="fotterText">
+        &nbsp; Bilet jednorazowy, na przejazd od 4 do 7 przystanków,
+        autobusemy wybranej linii. Ważny od momentu zakupu. <br />
+        Nie uprawnia do przesiadek.
+      </p>
+      <p style="
             text-align: center;
             font-size: smaller;
             width: 90%;
             font-weight: 400;
             font-family: 'Roboto', sans-serif;
             color: rgb(66, 64, 64);
-          "
-          class="disable-selection"
-          id="idTicket"
-        >
-          <b>Nr biletu: </b>JZ-1329-
-        </p>
-        <!-- </div>s -->
-      </div>
+          " class="disable-selection" id="idTicket">
+        <b>Nr biletu: </b>JZ-1329-
+      </p>
+      <!-- </div>s -->
     </div>
-    <div id="downMenu">
-      <div class="menuInputs">
-        <img src="./image_part_001.png" alt="" srcset="" />
-      </div>
-      <div class="menuInputs" id="stupidBtn">
-        <img src="./image_part_002.png" />
-      </div>
-      <div class="menuInputs">
-        <img src="./image_part_003.png" alt="" srcset="" />
-      </div>
+  </div>
+  <div id="downMenu">
+    <div class="menuInputs">
+      <img src="./image_part_001.png" alt="" srcset="" />
     </div>
-    <script src="script.js"></script>
-  </body>
+    <div class="menuInputs" id="stupidBtn">
+      <img src="./image_part_002.png" />
+    </div>
+    <div class="menuInputs">
+      <img src="./image_part_003.png" alt="" srcset="" />
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+
 </html>
