--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <img src="./image_part_003.png" alt="" srcset="" />
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="script.js?v=1"></script>
 </body>
 
 </html>
